--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EYE</title>
   <script type="module" src="/src/index.js"></script>
+  <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
 <E-Y-E></E-Y-E>
-
 </body>
 </html>
