--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    E-Y-E nav {
-      position: absolute;
-      left:0px;
-      top:0px;
-      z-index:1000;
-    }
-  </style>
+
+    <!-- 
+
+        *** BEGIN ASCII ART ***
+    ________    _     _    ________
+   |________|  | |   | |  |________|
+    ________   | |___| |   ________
+   |________|   |_   _|   |________|
+    ________      | |      ________
+   |________|     |_|     |________|
+
+        *** END ASCII ART *** 
+
+    EYE is my personal Camera App. It is designed to take an image and flip it.
+
+  -->
+
   <title>EYE</title>
-  <!-- <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script> -->
 
   <script type="module" src="/src/index.js"></script>
   <link rel="stylesheet" type="text/css" href="/styles.css">
