fixed relative paths

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <title>EYE</title>
 
-  <script type="module" src="/src/index.js"></script>
-  <link rel="stylesheet" type="text/css" href="/styles.css">
+  <script type="module" src="./src/index.js"></script>
+  <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
 <E-Y-E></E-Y-E>
